--- a/ClientApp/src/app/shared/camas/camas.component.css
+++ b/ClientApp/src/app/shared/camas/camas.component.css
@@ -4,12 +4,11 @@
   margin: 20px;
 }
 
-/* Estilo para el título principal */
 h2 {
   font-size: 1.5rem;
   color: #333;
-  margin-bottom: 10px;
-  margin-left: 20px;
+  margin-bottom: 20px;
+  text-align: center;
   font-weight: bold;
 }
 
