--- a/ClientApp/src/app/shared/consultas/consultas.component.css
+++ b/ClientApp/src/app/shared/consultas/consultas.component.css
@@ -7,8 +7,8 @@
   h2 {
     font-size: 1.5rem;
     color: #333;
-    margin-bottom: 10px;
-    margin-left: 20px;
+    margin-bottom: 20px;
+    text-align: center;
     font-weight: bold;
   }
   
