--- a/ClientApp/src/app/shared/ingresos/ingresos.component.css
+++ b/ClientApp/src/app/shared/ingresos/ingresos.component.css
@@ -7,11 +7,10 @@
   h2 {
     font-size: 1.5rem;
     color: #333;
-    margin-bottom: 10px;
-    margin-left: 20px;
+    margin-bottom: 20px;
+    text-align: center;
     font-weight: bold;
   }
-  
   /* Contenedor de la tabla */
   .table-container {
     width: 100%;
