--- a/ClientApp/src/app/shared/habitaciones/habitaciones.component.html
+++ b/ClientApp/src/app/shared/habitaciones/habitaciones.component.html
@@ -1,6 +1,7 @@
 <div class="habitaciones-section">
   <h2>Habitaciones</h2>
   <div class="table-container">
+    <app-snackbar></app-snackbar>
     <table class="table">
       <thead>
         <tr>
@@ -11,7 +12,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let habitacion of habitacionesPaginas">
+        <tr *ngFor="let habitacion of habitaciones">
           <td>{{ habitacion.Edificio }}</td>
           <td>{{ habitacion.Planta }}</td>
           <td>{{ habitacion.NumeroHabitacion }}</td>
@@ -40,17 +41,7 @@
     </table>
   </div>
 
-  <!-- Navegación de Paginación -->
-<div class="paginacion">
-  <button (click)="irAPrimeraPagina()" [disabled]="paginaActual === 1">Primera</button>
-  <button (click)="paginaAnterior()" [disabled]="paginaActual === 1">Anterior</button>
 
-  <!-- Mostrar la página actual y el total de páginas -->
-  <span>Página {{ paginaActual }} de {{ totalPaginas }}</span>
-
-  <button (click)="paginaSiguiente()" [disabled]="paginaActual === totalPaginas">Siguiente</button>
-  <button (click)="irALaUltimaPagina()" [disabled]="paginaActual === totalPaginas">Última</button>
-</div>
 
   <div class="form-container">
     <h3>Agregar Habitación</h3>
