--- a/ClientApp/src/app/shared/usuarios/usuarios.component.html
+++ b/ClientApp/src/app/shared/usuarios/usuarios.component.html
@@ -43,7 +43,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Acciones</th>
         <td mat-cell *matCellDef="let usuario">
           <button mat-button (click)="toggleActualizarUsuario(usuario)">Actualizar</button>
-          <button mat-button color="warn" (click)="borrarUsuario(usuario)">Eliminar</button>
+          <button mat-button color="warn" (click)="borrarUsuario(usuario.IdUsuario)">Eliminar</button>
         </td>
       </ng-container>
 
